<resources>
    <string name="app_name">Gemini API Test</string>
<!--
    <string name="prompt_placeholder">Please assess whether the given image depicts human teeth. Indicate if the image is clear, if it shows human teeth, provide a reason for your assessment, estimate the likelihood of it being a teeth image on a scale from 0 to 10, and state if there are any visible signs of decay or cavities.</string>
-->
    <string name="scan">Scan</string>
    <string name="prompt_placeholder">
        Please assess the provided image for dental analysis, considering the following factors: image clarity, presence of teeth, signs of decay or cavities, and overall relevance to dental assessment.
        Estimate the likelihood of it being a teeth image on a scale from 0 to 10.
        Before proceeding, ensure the image does not contain inappropriate content such as nudity, violence, or personal information.
        If it does, please inform the user that the image is unsuitable for dental assessment.
        If the image passes the safety check, evaluate its suitability for analysis.
        Assess the presence and clarity of teeth, signs of decay or other issues, gum health, and any dental work visible.
        Provide guidance on uploading a clear, well-lit image with proper orientation if necessary.
        If the image does not meet the criteria or does not depict human teeth, explain why and guide the user on capturing a suitable image for dental analysis,
        such as a high-resolution close-up photo of the teeth.</string>

    <!--<string name="prompt_placeholder">Please assess whether the provided image depicts human teeth.
        Evaluate image clarity, presence of teeth, signs of decay or cavities, and overall relevance to dental assessment.
        Estimate the likelihood of it being a teeth image on a scale from 0 to 10.
        If the image does not meet criteria or does not depict human teeth, explain what it portrays,
        why and provide a detailed explanation and guide the user on how to upload a suitable image for dental analysis.</string>-->
    <string name="retake_scan">Retake Scan</string>
    <string name="done">Done</string>
    <string name="processing">Image captured. Processing image....</string>
    <string name="scan_result">Scan result will be displayed here.</string>
    <string name="teeth_image">Teeth Image</string>
    <string name="instructions_text">Place your teeth within the frame and tap the scan button</string>
    <string name="captured_image">Captured Image</string>
</resources>